--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             </p>
             
             <div class="contact animate__animated animate__fadeIn animate__delay-3s">
-                Untuk pertanyaan mendesak, hubungi kami di <a href="mailto:support@anekamarket.com">support@anekamarket.com</a>
+                Untuk pertanyaan mendesak, hubungi kami di <a href="mailto:lenterakaryasitubondo@gmail.com">lenterakaryasitubondo@gmail.com</a>
             </div>
         </div>
     </div>
