--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         body {
             font-family: 'Poppins', sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: var(--dark-color);
             background-color: #f5f7fa;
-            padding: 0;
+            padding: 20px;
             min-height: 100vh;
         }
 
@@ -54,7 +54,7 @@
             border-radius: var(--border-radius);
             box-shadow: var(--box-shadow);
             overflow: hidden;
-            min-height: 100vh;
+            min-height: calc(100vh - 40px);
             display: flex;
             flex-direction: column;
         }
@@ -870,6 +870,10 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+            
             header {
                 padding: 1rem;
             }
