--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
             
             if (isValid) {
                 generateAgreement();
-                alert('Surat perjanjian telah di-generate. Silakan cetak, download, atau kirim via WhatsApp.');
+                alert('Surat perjanjian telah dibuat. Silakan cetak atau download, lalu kirim via WhatsApp kepada Admin.');
             } else {
                 alert('Silakan periksa kembali form Anda. Ada data yang belum valid.');
             }
