--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
             
             <div class="article">
                 <div class="article-title">PASAL 8 - PENUTUP</div>
-                <p>Demikian perjanjian ini dibuat dalam satu rangkap asli yang bermaterai cukup dan memiliki kekuatan hukum yang sah, untuk digunakan sebagaimana mestinya.</p>
+                <p>Demikian perjanjian ini dibuat dalam satu rangkap asli yang bertandatangan elektonik dan memiliki kekuatan hukum yang sah, untuk digunakan sebagaimana mestinya.</p>
             </div>
             
             <div class="signature-area">
